debbuging and README.md